crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__class_body_with_formatter_ignore.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
class Demo {
  fun before() {}
  // @formatter:off
  fun raw(){ }
  // @formatter:on
  /* member */ +
}

formatted:
class Demo {
  fun before() {}
  // @formatter:off
  fun raw(){ }
  // @formatter:on
  /* member */
  +
}

diagnostics:
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(100), end: TextSize(101) }) message=unexpected orphan class member
