crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__class_followed_by_recovered_expression.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
class Unexpected + (val value: Int)

formatted:
class Unexpected
+(val value: Int)

diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(20), end: TextSize(23) }) message=expected expression
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(24), end: TextSize(29) }) message=unexpected token in expression
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(29), end: TextSize(30) }) message=unexpected token in expression
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(31), end: TextSize(34) }) message=unexpected token in expression
