crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__collection_and_index_lists.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
fun demo(values: List<Int>) { [/* collection */ , value]
values[/* index */ , 0] }

formatted:
fun demo(values: List<Int>) {
  [ /* collection */
    ,
    value
  ]
  values[ /* index */
    ,
    0
  ]
}

diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(48), end: TextSize(49) }) message=expected list item
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(76), end: TextSize(77) }) message=expected list item
