crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__context_function_type.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
typealias Handler = context(First, /* orphan */ , Second) () -> Unit

formatted:
typealias Handler = context(First, /* orphan */ , Second) () -> Unit

diagnostics:
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(48), end: TextSize(49) }) message=expected function type parameter between commas
