crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__control_flow_missing_children.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
fun demo(flag: Boolean) { label@
do { work() }
when (flag)
}

formatted:
fun demo(flag: Boolean) {
  label@ do {
    work()
  }
  when (flag)
}

diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(47), end: TextSize(51) }) message=expected 'while' after do body
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(47), end: TextSize(51) }) message=expected '(' before condition
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(47), end: TextSize(51) }) message=expected condition after 'while'
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(47), end: TextSize(51) }) message=expected ')' after condition
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(59), end: TextSize(60) }) message=expected '{' after when subject
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(59), end: TextSize(60) }) message=expected '}' after when
