crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__declaration_tails.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
fun value() =
val answer =
val delegated by

formatted:
fun value() =

val answer =
val delegated by

diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(14), end: TextSize(17) }) message=expected declaration body expression
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(27), end: TextSize(30) }) message=expected property initializer expression
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(44), end: TextSize(44) }) message=expected property initializer expression
