crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__definitely_non_nullable_bang.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
fun <T> definitelyNonNullable(value: T!!): T = value

formatted:
fun <T> definitelyNonNullable(value: T!!): T = value

diagnostics:
(none)
