crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__destructuring.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
val (first, /* orphan */ , second) = pair

formatted:
val (first, /* orphan */ , second) = pair

diagnostics:
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(27), end: TextSize(33) }) message=expected destructuring entry between commas
