crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__destructuring_entry_without_name.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
// A destructuring entry begins with an optional `val`/`var` and a name, so a
// literal there is something no entry can consume: `parse_name` reports the
// missing name without advancing. The entry loop has to take the token itself or
// it never advances -- unbounded in a release build, where the debug assertion
// that guards the loop is compiled out.
fun literalEntries() {
  val (1, 2) = pair
}

fun mixedEntries() {
  val (first, 2, third) = triple
}

fun trailingLiteralEntry() {
  val (first, 2) = pair
}

fun bracketedLiteralEntries() {
  val [1, 2] = pair
}

formatted:
// A destructuring entry begins with an optional `val`/`var` and a name, so a
// literal there is something no entry can consume: `parse_name` reports the
// missing name without advancing. The entry loop has to take the token itself or
// it never advances -- unbounded in a release build, where the debug assertion
// that guards the loop is compiled out.
fun literalEntries() {
  val (1, 2) = pair
}

fun mixedEntries() {
  val (first, 2, third) = triple
}

fun trailingLiteralEntry() {
  val (first, 2) = pair
}

fun bracketedLiteralEntries() {
  val [1, 2] = pair
}

diagnostics:
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(388), end: TextSize(389) }) message=expected destructuring entry
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(391), end: TextSize(392) }) message=expected destructuring entry
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(439), end: TextSize(440) }) message=expected destructuring entry
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(504), end: TextSize(505) }) message=expected destructuring entry
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(556), end: TextSize(557) }) message=expected destructuring entry
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(559), end: TextSize(560) }) message=expected destructuring entry
