crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__else_without_branch.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
fun demo(flag: Boolean) { if (flag) yes() else }

formatted:
fun demo(flag: Boolean) {
  if (flag) yes() else
}

diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(47), end: TextSize(48) }) message=expected expression
