crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__explicit_backing_field.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
val value: Int field = /* backing */ compute()

formatted:
val value: Int
  field = /* backing */  compute()

diagnostics:
(none)
